fix: Add a gap between recent posts button + heading

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -34,6 +34,7 @@ $max_width: 42em; // arbitrary. but nice!
         padding: 0 2.4em; // move Recent Posts and button in a bit
 
         display: grid;
+        gap: 1em;
         grid-template-columns: auto auto;
         border-radius: 1.4em;
 
